--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -2,16 +2,28 @@
 \section{Introduction}
 \label{sec:intro}
 
-The Non-Uniform Memory Access (NUMA) architecture is an appealing solution for the scalability of multi-core era. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of a central memory controller: each processor (also known as a domain or node) consists of multiple cores, while each node can access its own memory controller. Different nodes are connected via high-speed inter-connection (such as Quick Path Interconnect (QPI)~\cite{intelqpi} or HyperTransport bus~\cite{hypertransport}) to form a cache-coherent system that presents an abstraction of a single globally addressable memory. 
-However, NUMA applications may have serious performance issues, if programs have one of the following issues, such as large amount of remote accesses, load imbalance, contention for interconnection, memory controller, and last level cache~\cite{Blagodurov:2011:CNC:2002181.2002182, Dashti:2013:TMH:2451116.2451157}, as discussed more in Section~\ref{sec:overview}. 
+The Non-Uniform Memory Access (NUMA) architecture is an appealing hardware solution for the scalability of multi-core era. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller: each processor (also known as a domain or node) consists of multiple cores, while all cores of each node can access its own memory controller. Different nodes are connected via high-speed inter-connection, such as Quick Path Interconnect~\cite{intelqpi} or HyperTransport bus~\cite{hypertransport}, in order to form a cache-coherent system that presents an abstraction of a single globally addressable memory. 
+However, NUMA applications may have serious performance issues, if programs have one of the following issues, such as large amount of remote accesses, load imbalance between different memory controllers, and  interconnect congestion~\cite{Blagodurov:2011:CNC:2002181.2002182, Dashti:2013:TMH:2451116.2451157}, as discussed more in Section~\ref{sec:overview}. 
 
-Multiple types of approaches help improve the performance of NUMA systems. The first type of approaches migrates tasks or physical pages reactively based on memory access patterns or other hardware characteristics~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. They improve the performance automatically without human involvement. However, these systems impose additional overhead (sometimes unnecessarily)  by migrating tasks or physical pages reactively. Further, the migration cannot reduce remote accesses if objects of the same page are concurrently accessed by  threads in multiple nodes~\cite{Gaud:2014:LPM:2643634.2643659}. 
-The second type of approaches relies on programmers to manage memory allocations and task assignments explicitly~\cite{Kaestle:2015:SSA:2813767.2813787, Lin:2016:MTP:2872362.2872401, Majo:2017:LPC:3057718.3040222}. Although they could improve the performance greatly, they typically require significant human effort to rewrite the programs, where legacy systems cannot benefit automatically. 
+Due to these issues, the NUMA architecture imposes additional challenges for memory management. Traditional memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Scalloc~\cite{Scalloc}, are not designed for the NUMA architecture, without considering the difference between different nodes. Thus, these allocators may perform badly for multithreaded applications on the NUMA architecture~\cite{tcmallocnew, yang2019jarena}, which is also confirmed by our evaluations. 
 
-Another type of approach focuses on heap management~\cite{tcmallocnew, kim2013node, yang2019jarena}. The NUMA-aware memory management is appealing, because there is no need to change applications explicitly. Also, they are belonging to proactive approaches that could reduce remote accesses without task or page migration. Among them, Kaminski et al. designs the first NUNA-aware memory allocator~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper, where the other two papers utilize a similar approach. TcMalloc-NUMA invokes the \texttt{mbind} system call to bind the memory explicitly to the node that a thread is running on, and guarantees local allocation initially.  
+%Multiple approaches help improve the performance of NUMA systems. They do not need to change applications explicitly, and they could reduce remote accesses proactively without task or page migration. 
+
+Some memory allocators are specially designed for the NUMA architecture~\cite{tcmallocnew, kim2013node, yang2019jarena}. Among them, Kaminski designs the first NUNA-aware memory allocator~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper, where the other two utilize a similar approach but with different focuses~\cite{kim2013node, yang2019jarena}. TcMalloc-NUMA satisfies an allocation from a block of memory that is explicitly bound to the thread's local node. TcMalloc-NUMA also introduces multiple per-node freelists to track freed objects for each node: on the one hand, if a per-thread cache has too many freed objects, some objects will be migrated to the per-node freelist that the thread is running on; On the other hand, if a thread is running out of the memory, it will obtain objects from its per-node freelist before obtaining from other freelists. TcMalloc-NUMA improves the performance of some applications by reducing the number of remote accesses~\cite{tcmallocnew}.  
 %Due to the explicit binding, it is able to check the locality of a memory block inside the user space, and then return a freed object back to the corresponding node based on the locality. TcMalloc-NUMA achieves some performance speedup for some synthetic applications. 
 
-However, TcMalloc-NUMA has load imbalance issue and locality issue as follows. First, it always allocates the memory from the node that the thread is currently running on. But it may cause significant performance issue if a thread is migrating to a new node, since a thread is forced to access its remote stack, and will lose the locality of cache lines. Further, this design is not tapped with the OS scheduler. As observed by previous study~\cite{Grace}, the OS scheduler typically assigns newly-created threads into the same processor as the parent thread in order to exploit cache locality. However, all pages allocated in the original node will be remote accesses, if a thread is dispatched to a remote node afterwards.  Second, it does not consider the load balance issue.  All objects that allocated in the main thread but accessed concurrently by multiple children threads will be located in the same node, causing the load imbalance issue. Third, it does not employ the recent progress of the hardware and OS support, such as huge page support. Fourth, its memory management cannot ensure the locality, if an object is deallocated by a thread that is different from the allocating thread. For such objects, \TN{} will simply place them into the local cache of the current thread, generating unnecessary remote accesses.  
+ 
+%Existing NUMA-aware allocators only deals with one aspect of allocation, but forgives other important aspects. 
+
+
+In TcMalloc-NUMA, the relationship between each thread and each node is not determined beforehand, which is completely relying on the OS scheduler. Although this design may benefit from better resource optimization provided by the OS scheduler, it actually adds additional overhead by frequently checking the placement of every thread. More importantly, \textit{this design may break the locality guarantee when a thread is migrated to a new node}. First, this thread is forced to access its own stack located in the old node, and reload all data that may already exist in cache lines of the old node. Even worse, after the migration, this thread may actually contribute objects that are originated from the old node to the freelist of the new node, causing remote accesses unnecessarily.  TcMalloc-NUMA has another serious issue that a freed object is always placed into the cache of the current thread, a design originated from TcMalloc~\cite{tcmalloc}.  The per-thread cache was designed to reduce the lock contention faced by multithreaded applications, since a thread can allocate objects from per-thread cache without acquiring any lock. However, it introduces the ``ownership shifting'' issue on the NUMA architecture, when an object is freed by a thread that is running on a different node from its allocation thread. Since such an object is placed to the per-thread cache of the deallocation thread, it will be accessed by threads that are not from its owner node afterwards, causing unnecessary remote accesses. 
+
+
+%is deallocated by a thread that is different from the allocating thread. For such objects, \TN{} will simply place them into the local cache of the current thread, generating unnecessary remote accesses.  
+
+% It may introduce significant performance issue, and destroy the whole always allocates the memory from the node that the thread is currently running on. But it may introduce the locality issue, when a thread is migrating to a new node, since a thread is forced to access its remote stack, and all cache lines should be reloaded. Further, this design is not tapped with the OS scheduler. As observed by previous study~\cite{Grace}, the OS scheduler typically assigns newly-created threads into the same processor as the parent thread in order to exploit cache locality. However, all pages allocated in the original node will be remote accesses, if a thread is dispatched to a remote node afterwards.  
+
+%Second, it does not consider the load balance issue.  All objects that allocated in the main thread but accessed concurrently by multiple children threads will be located in the same node, causing the load imbalance issue. Third, it does not employ the recent progress of the hardware and OS support, such as huge page support. Fourth, its memory management cannot ensure the locality, if an object is deallocated by a thread that is different from the allocating thread. For such objects, \TN{} will simply place them into the local cache of the current thread, generating unnecessary remote accesses.  
 
 
 \begin{comment}
@@ -30,37 +42,43 @@ In the end, it utilizes the mbind to bind the memory to a node specifically.
 %Based on our evaluation, TcMalloc-NUMA cannot achieve good performance for many applications.  
 %However, none of these systems could achieve the performance promised by the hardware. Given a simple example, if one page is fulled with objects that are utilized by different threads running on different nodes, then it is not able to achieve the best performance no matter where this page is located. Similarly, the passive tracking of memory ownership of an object cannot completely avoid the ownership drifting problem, where the . 
 
-This paper proposes a novel NUMA-aware memory allocator -- \NM{} -- to address these  issues. \NM{} improves both load balance and locality with the following designs.  
+This paper proposes a novel NUMA-aware memory allocator -- \NM{} -- to address these  issues of existing memory allocators. Different from existing memory allocators, \NM{} \textit{not only specifies the node relationship for each thread, but also employs fine-grained memory management based on the classification of allocations and deallocations}. Overall, \NM{} improves both load balance and locality with the following designs.  
 
-First, \NM{} proposes a \textbf{binding-based memory management policy} that ensures both load balance and locality. For load balance, \NM{} binds threads to different NUMA nodes in an interleaved way. That is, a newly -created thread will be always bound to a different node from its predecessor. Because of this binding policy, every node will have a similar number of threads, ensuring load balance between different memory controllers. Due to the binding, a thread will not be migrated to a different node, avoiding the performance loss caused by cross-node thread migration. For the locality, \NM{} reserves a range of virtual memory for each node, where all physical pages can be only allocated from this node (specified via \texttt{mbind} system call). For each thread, allocations can be only satisfied from its per-node heap, or from a per-thread cache that always tracked freed objects originated from the same node. More specifically, \NM{} checks the node locality of an object upon the deallocation, and only places an object into its per-thread cache if it is originated from the same node. Otherwise, the object will be returned to its original node. This is different from \TN{}. \NM{} also reduces locality issues by always allocating the metadata from the local node.  
+%Simply integrating thread binding, heap interleaving and huge page does not guarantee good performance. Instead, carefully design is required to properly coordinate the thread scheduling, memory object allocation/deallocation and huge page management to achieve better performance.
+
+First, \NM{} proposes a \textbf{binding-based memory management policy} that ensures both load balance and locality. As described above, cross-node thread migration may cause significant performance issue on a NUMA architecture. \NM{} binds every thread to a node to avoid cross-node migration. Although the integration of task scheduling with memory management (mostly in OS level) has been proposed before~\cite{Redline, wagle2015numa, diener2015automatic}, \textit{\NM{} is the first memory allocator that integrates the thread binding}. \NM{} only binds a thread to a specific node, but not to a specific core, which still allows the migration inside the node when necessary. \NM{}'s binding also considers load balance by binding threads to different NUMA nodes in an interleaved way. That is, a newly-created thread will be always bound to a different node from its predecessor. Because of this binding policy, every node will have a similar number of threads, ensuring load balance between different nodes (and memory controllers).  For memory management, \NM{} reserves a range of virtual memory for each node that all physical pages can be only allocated from this node (via \texttt{mbind} system call),  and ensures local allocations based on the binding location of each thread. Allocations are always satisfied from per-thread cache, with objects migrated from its per-node freelists or from per-node heap. Different from TcMalloc-NUMA, \NM{} checks the node locality of each object upon the deallocation, a classification based on the origin of an object, and only places an object into its per-thread cache if it is originated from the same node. Otherwise, the object will be returned to its original node. Due to the binding, \NM{} also ensures that the metadata of each thread and each node is also allocated from the local node, which cannot be done without the thread-binding.  
+
 
 
 % task management altogether, by binding tasks to different NUMA nodes interleavedly and binding the memory explicitly. The task binding not only benefits the load balance, due to its even distribution of tasks, but also constructs the basis for its memory management. In this design, there is no need to query the locality of tasks dynamically, and it is guaranteed to have the correct locality for the memory. 
   
-Second, \NM{} further proposes \textbf{an interleaved heap} to reduce the load imbalance issue. More specifically, \NM{} reserves a range of virtual memory that physical pages will be allocated interleavedly across all physical nodes. That is, physical pages from the interleaved heap will be evenly allocated from all nodes, avoiding the congestion of one memory controller~\cite{Blagodurov:2011:CNC:2002181.2002182}. However, a naive method of allocating all objects from the interleaved heap may actually cause unnecessary remote accesses. For instance, private objects should be always allocated in the local node, instead of from the interleaved heap. \NM{} only allocates potentially-shared objects from the interleaved heap, and proposes a heuristics method to determine such objects, as described in Section~\ref{sec:mainthread}.  
+Second, \NM{} further proposes \textbf{an interleaved heap} for potentially-shared objects, helping reduce the congestion of one memory controller~\cite{Blagodurov:2011:CNC:2002181.2002182}. Physical pages of the interleaved heap are allocated interleavedly across all physical nodes. However, a naive method of allocating private objects from the interleaved heap may actually cause unnecessary remote accesses, although providing a better balance. 
+%For instance, private objects should be always allocated in the local node, instead of from the interleaved heap. 
+\NM{} checks the shared pattern of objects upon allocations, and only allocates potentially-shared objects from the interleaved heap. \NM{} further proposes a heuristics method to determine shared objects, as described in Section~\ref{sec:mainthread}. 
 
- Third, \NM{} proposes new huge page support, by employing the recent progress of the hardware and the OS. Note that this is different from the default support of transparent huge page. As observed by existing study~\cite{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}, the transparent huge page mechanism has a harmful impact on the performance for the NUMA architecture, due to memory waste and page-level false sharing. Differently, \NM{} only utilizes huge pages for big objects and small objects that are allocated extensively. \NM{}'s huge page support minimizes both memory waste and page-level false sharing. Based on our evaluation, \NM{}'s huge page support is always benefiting the performance (Section~\ref{sec:hugepage}). 
+ Third, \NM{} further employs \textbf{huge page support}, the recent progress of the hardware and the OS, in order to reduce TLB and cache misses. Note that this is different from the default support of transparent huge page (THP), which is observed to have a harmful impact on the performance for the NUMA architecture~\cite{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}. The default THP may cause unnecessary memory waste and page-level false sharing. Differently, \NM{} classifies each allocation by its size and allocation pattern, limiting huge pages only for big objects and small objects that are allocated extensively. In this method, \NM{} minimizes both memory waste and page-level false sharing. Based on our evaluation, \NM{}'s huge page support is always benefiting the performance (Section~\ref{sec:hugepage}). 
  
- Besides that, \NM{} is implemented very carefully in order to achieve the good performance. It introduces many implementation techniques, such as fast metadata lookup, cache warmup mechanism, efficient objects migration, node-local metadata, as further described in Section~\ref{sec:implement}. 
+ In addition to these mechanisms, \NM{} is implemented very carefully in order to achieve the good performance. It designs a mechanism to quickly locate the locality and size of each object upon deallocations. \NM{} designs an efficient mechanism to move objects between per-thread freelist and its per-node freelist, without iterating objects in the freelist. It also reduces the memory consumption for transparent huge page support. 
  
 % Second, it proactively bound the memory to different nodes, so that it could reduce the . Third, it takes a different method to deal with allocations from main thread, Fourth, it takes the advantage of hardware progress automatically, e.g., huge pages. One application achieves 10\% performance speedup with this consideration.  
 
 
 %There are other implementation issues that may also contribute to the performance improvement. For instance, the metadata will be always allocated locally. The big objects will be re-utilized by small objects automatically, in order to reduce the potential cache misses. 
 
-We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Intel TBB~\cite{tbb}, and Scalloc~\cite{Scalloc}. For the performance on real applications, \NM{} achieves around 13\% speedup on average comparing to the default Linux allocator, which is also 11\% faster than the second best one. For the best case, \NM{} achieves up to $5.8\times$ faster than the default allocator, and $4.7\times$ faster than the second best one (TcMalloc). For four synthetic applications, \NM{} is running around $2.2\times$ faster on average than the second best one on an 8-node machine. In total, \NM{} may impose around 23\% memory overhead, but is much more scalable than all other allocators.  \NM{} is ready for the practical employment, due to its high performance, and good scalability. 
+We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Intel TBB~\cite{tbb}, and Scalloc~\cite{Scalloc}. For the performance on real applications, \NM{} achieves around 13\% speedup on average comparing to the default Linux allocator, which is also 11\% faster than the second best one. For the best case, \NM{} runs up to $5.8\times$ faster than the default allocator, and $4.7\times$ faster than the second best one (TcMalloc). For four synthetic applications, \NM{} is running around $2.2\times$ faster on average than the second best one on an 8-node machine. In total, \NM{} may impose around 23\% memory overhead, but is much more scalable than all other allocators.  \NM{} is ready for the practical employment, due to its high performance, and good scalability. \\
 
 Overall, this paper has the following contributions. 
 
 \begin{itemize}
-\item \NM{} proposes a binding-based memory management that integrates task management with memory management together. This design ensures both load balance and locality.  
-\item \NM{} proposes an interleaved heap in order to reduce load imbalance issue caused by shared objects. 
-\item \NM{} proposes new huge page support that  minimizes memory waste and avoids page-level false sharing, which always benefits the performance. 
-\item \NM{} includes multiple careful designs to reduce the performance and memory overhead, such as fast metadata lookup, efficient objects migration. 
+\item \NM{} proposes a binding-based memory management and an interleaved heap that ensures both load balance and locality.  
+\item \NM{} proposes fine-grained memory management that is based on the size, the allocation pattern, the shared pattern, the origin of objects, and the location of a thread. 
+
+\item \NM{} includes multiple careful designs to reduce the performance and memory overhead, such as fast metadata lookup, and efficient objects migration. 
+
 \item The extensive experiments confirm that \NM{} has a better performance and scalability than even widely-used industrial allocators. 
 \end{itemize}
 
-The remainder of this paper is organized as follows. Section~\ref{sec:overview} introduces the NUMA architecture and the corresponding OS support. Section~\ref{sec:implement} focuses on the design and implementation of \NM{}. After that, Section~\ref{sec:evaluation} describes its experimentation evaluation, and Section~\ref{sec:limit} discusses the limitation of \NM{}. In the end, Section\ref{sec:related} discusses some relevant related work, and then Section~\ref{sec:conclusion} concludes. 
+The remainder of this paper is organized as follows. Section~\ref{sec:overview} introduces the NUMA architecture and the corresponding OS support. Section~\ref{sec:implement} focuses on the design and implementation of \NM{}. After that, Section~\ref{sec:evaluation} describes its experimental evaluation, and Section~\ref{sec:limit} discusses the limitation of \NM{}. In the end, Section\ref{sec:related} discusses some relevant related work, and then Section~\ref{sec:conclusion} concludes. 
 
 \begin{comment}
 
