--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -175,6 +175,13 @@
   school={University of York}
 }
 
+@article{yang2019jarena,
+  title={JArena: Partitioned Shared Memory for NUMA-awareness in Multi-threaded Scientific Applications},
+  author={Yang, Zhang and Zhang, Aiqing and Mo, Zeyao},
+  journal={arXiv preprint arXiv:1902.07590},
+  year={2019}
+}
+
 @inproceedings{Scalloc,
  author = {Aigner, Martin and Kirsch, Christoph M. and Lippautz, Michael and Sokolova, Ana},
  title = {Fast, Multicore-scalable, Low-fragmentation Memory Allocation Through Large Virtual Memory and Global Data Structures},
@@ -658,6 +665,24 @@ month={Sept},
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
 } 
+
+@inproceedings{WilliamsI0L18,
+  author    = {Sean Williams and
+               Latchesar Ionkov and
+               Michael Lang and
+               Jason Lee},
+  title     = {Heterogeneous Memory and Arena-Based Heap Allocation},
+  booktitle = {Proceedings of the Workshop on Memory Centric High Performance Computing,
+               MCHPC@SC 2018, Dallas, TX, USA, November 11, 2018},
+  pages     = {67--71},
+  year      = {2018},
+  crossref  = {DBLP:conf/sc/2018mchpc},
+  url       = {https://doi.org/10.1145/3286475.3286568},
+  doi       = {10.1145/3286475.3286568},
+  timestamp = {Sat, 22 Dec 2018 17:30:19 +0100},
+  biburl    = {https://dblp.org/rec/conf/sc/WilliamsI0L18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @inproceedings{Brorsson:1994:MAM:2061038.2061331,
  author = {Brorsson and Stenstrom},
