--- a/paper/main.tex
+++ b/paper/main.tex
@@ -60,12 +60,12 @@
     \normalfont B\kern-0.5em{\scshape i\kern-0.25em b}\kern-0.8em\TeX}}}
 
 \citestyle{acmauthoryear}
-
+\def\bibfont{\normalfont}
 % May send this work to Emery and Qiang zheng for their feedbacks. 
 
 \begin{document}
 
-\title{NUMAlloc: An Adaptive NUMA Memory Allocator}
+\title{NUMAlloc: Fine-grained NUMA Memory Allocator}
 \author{Anonymous}
 
 \input{abstract}
