--- a/paper/memorytable.tex
+++ b/paper/memorytable.tex
@@ -1,8 +1,8 @@
 \renewcommand{\arraystretch}{1.5}
 \begin{table}[tp]
-
+\footnotesize
   \centering
-  \fontsize{6.5}{8}\selectfont
+ % \fontsize{6.5}{8}\selectfont
   \caption{Memory consumption of Different Allocators in Machine B (8-node)\label{tab:memory_consumption}}
   
     \begin{tabular}{|l|r|r|r|r|r|r|r|}
